[FIX] Slight style fixes
Asides are now centered at higher resolutions
to prevent mobile views with hard to read
texts. Index is now 1 column wide on mobile.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -61,24 +61,14 @@ aside.left {
     grid-template-rows: auto;
   }
   aside.right {
-    margin-right: 1em;
-    width: 250px;
-    text-align: right;
-  }
-  aside.left {
-    margin-left: 1em;
-    width: 250px;
-    text-align: left;
-  }
-}
-@media all and (max-width:400px) {
-  aside.right {
     margin: 10px 0 15px 0;
+    margin-left: 1em;
     width: 100%;
     text-align: center;
   }
   aside.left {
     margin: 10px 0 15px 0;
+    margin-left: 1em;
     width: 100%;
     text-align: center;
   }
@@ -95,6 +85,14 @@ aside.left {
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
   grid-column-gap: 10px;
+}
+
+@media all and (max-width:700px) {
+  .index {
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-column-gap: 10px;
+  }
 }
 
 .index-item {
